--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title> Admin Mapas</title>
-    <!-- <base href="/"> -->
-    <base href="https://mapaconcentracion.sinmordaza.org/admin/">
+    <base href="/">
+    <!-- <base href="https://mapaconcentracion.sinmordaza.org/admin/"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Bootstrap Core CSS -->
